# cpp-projects

./: README.md
ex4-or_meisso1/: Activation.cpp  Activation.h  CMakeLists.txt  Dense.cpp  Dense.h  Matrix.cpp  Matrix.h  MlpNetwork.cpp  MlpNetwork.h  README.md  main.cpp  main_tests.cpp
ex5-or_meisso1/: CMakeLists.txt  Movie.cpp  Movie.h  README.md  RecommendationSystem.cpp  RecommendationSystem.h  RecommendationSystemLoader.cpp  RecommendationSystemLoader.h  User.cpp  User.h  UsersLoader.cpp  UsersLoader.h  presubmit.cpp  print_main.cpp
